--- a/styles.css
+++ b/styles.css
@@ -28,5 +28,15 @@ form button {
     margin-left: auto;
 }
 
+h1 {
+    
+}
 
- 
+/* HEADER STYLES */
+header {
+    background-color: teal;
+    color: white;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
