fixed footer after assessment

--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,7 @@ header {
 
 footer {
     background-color: teal;
+    height: 60px;
     color: white;
     padding: 1rem;
     margin-top: 20rem;
